# generics-pizza

./: .gitignore  .swiftlint.yml  BUILD.bazel  Dockerfile  Dockerfile_  GenericsAppTests.xctestplan  MODULE.bazel  Package.resolved  Package.swift  README.md  docker-compose.yml  lint.sh  openapi.json  openapi.yml
CommonWorkspace.xcworkspace/: contents.xcworkspacedata
GenericsApp/: AppFeature.swift  ContentView.swift  GenericsApp.swift  MainHeaderView.swift
GenericsAppUITests/: GenericsAppUITests.swift
GenericsDriver/: AppFeature.swift  ContentView.swift  Gradient.metal  LocationManager.swift  PreviewCoordinates.swift
GenericsDriverTests/: ProfileFeatureTests.swift
GenericsPackage/: .gitignore  Dockerfile  Package.resolved  Package.swift
clients/bot/: BUILD.bazel
clients/bot/sources/: Publisher+stream.swift  bot.swift
clients/bot/sources/roles/: Customer.swift  Driver.swift  Restaurant.swift
clients/features/: BUILD.bazel
clients/features/auth-logic/: BUILD.bazel
clients/features/auth-logic/sources/: AuthFeature.swift  Container+AuthenticationRepository.swift  CreateAccountFeature.swift  LoginFeature.swift
clients/features/customer-cart/: CartView.swift  CartViewModel.swift
clients/features/customer-menu/: MenuView.swift  MenuViewModel.swift
clients/generics-app/: BUILD.bazel
clients/generics-app/sources/: AppFeature.swift  Container+Repositories.swift  ContentView.swift  GenericsApp.swift  MainHeaderView.swift
clients/generics-app/sources/Cart/: CartFeature.swift  CartItemFeature.swift  CartView.swift  CartViewModel.swift
clients/generics-app/sources/Cart/views/: CartItemsView.swift  CartTotalView.swift
clients/generics-app/sources/CustomerCart/: CartView.swift
clients/generics-app/sources/CustomerMenu/: MenuItemDetailView.swift  MenuView.swift
clients/generics-app/sources/CustomerMenu/views/: MenuHeaderView.swift  MenuRowView.swift
clients/generics-app/sources/Menu/: MenuFeature.swift  MenuView.swift  MenuViewModel.swift
clients/generics-app/sources/Menu/MenuHeader/: MenuHeaderFeature.swift  MenuHeaderView.swift
clients/generics-app/sources/Menu/MenuList/: MenuListFeature.swift  MenuListView.swift
clients/generics-app/sources/Menu/MenuList/views/: MenuRowView.swift
clients/generics-app/sources/Menu/views/: MenuHeaderView.swift  MenuRowView.swift
clients/generics-app/sources/MenuDetail/: MenuDetailFeature.swift  MenuDetailView.swift  MenuDetailViewModel.swift
clients/generics-app/sources/OrderDestination/: OrderDestinationFeature.swift  OrderDestinationView.swift
clients/generics-app/sources/OrderDestination/views/: DeliveryFormView.swift  PickUpFormView.swift
clients/generics-app/sources/Tracking/: TrackingFeature.swift  TrackingView.swift
clients/generics-driver/: BUILD.bazel
clients/generics-driver/sources/: AppFeature.swift  AvatarView.swift  Container+Repositories.swift  ContentView.swift  GenericsDriver.swift  Gradient.metal
clients/generics-driver/sources/Dashboard/: DashboardFeature.swift  DashboardView.swift  DetailsTile.swift
clients/generics-driver/sources/Login/: GradientBackgroundView.swift  LoginFeature.swift  LoginView.swift
clients/generics-driver/sources/Profile/: ProfileFeature.swift  ProfileView.swift
clients/generics-driver/sources/Splash/: SplashView.swift
clients/generics-restaurants/: BUILD.bazel
clients/generics-restaurants/resources/Assets.xcassets/pizza.imageset/: Contents.json
clients/generics-restaurants/sources/: AppFeature.swift  AuthFeature.swift  Container+Repositories.swift  ContentView.swift  DashboardFeature.swift  DashboardView.swift  GenericsRestaurantsApp.swift  SimpleListState.swift
clients/generics-restaurants/sources/CreateAccount/: CreateAccountFeature.swift  CreateAccountView.swift
clients/generics-restaurants/sources/Insights/: InsightsFeature.swift  InsightsView.swift
clients/generics-restaurants/sources/Login/: LoginFeature.swift  LoginView.swift
clients/generics-restaurants/sources/Menu/: MenuFeature.swift  MenuItemFeature.swift  MenuView.swift
clients/generics-restaurants/sources/Menu/MenuItemForm/: MenuItemFormFeature.swift  MenuItemFormView.swift
clients/generics-restaurants/sources/Menu/NewMenuItem/: NewMenuItemFeature.swift  NewMenuItemView.swift
clients/generics-restaurants/sources/Menu/views/: MenuItemView.swift
clients/generics-restaurants/sources/NewCategory/: NewCategoryFeature.swift  NewCategoryView.swift
clients/generics-restaurants/sources/Now/: NowFeature.swift  NowView.swift
clients/generics-restaurants/sources/OrderHistory/: OrderHistoryFeature.swift  OrderHistoryView.swift  OrderListRowView.swift
clients/generics-restaurants/sources/Users/: UsersFeature.swift  UsersView.swift
clients/generics-restaurants/tests/: AppFeatureTests.swift  LoginFeatureTests.swift  MenuFeatureTests.swift
clients/libraries/: BUILD.bazel
clients/libraries/core/: DriverRepository.swift  Factory.swift  ImageData.swift  LocalSettingsService.swift  MenuRepository.swift  OrderRepository.swift  OrderRestaurantRepository.swift  RoutingService.swift  SimpleListState.swift  UsersRepository.swift
clients/libraries/core/Authentication/: AuthenticationProvider.swift  AuthenticationRepository.swift  AuthenticationService.swift
clients/libraries/helpers/: ExternalMapOpener.swift  SimpleListState.swift  ThrowingAsyncTask.swift
clients/libraries/swiftly-http/: SwiftlyHttp.swift
clients/libraries/ui/: ButtonStyles.swift  CardView.swift  Colors.swift  Fonts.swift  SelectorView.swift  Spacings.swift  TextFieldStyle.swift  ViewState.swift
clients/libraries/uikit/: ButtonConfigurations.swift  CustomInOutTransitinableController.swift  SliderToActionView.swift  TextField.swift
generics-ios-app/: .swiftlint.yml  (+1 more)
generics-restaurants/: BUILD.bazel
generics-restaurants/sources/: Container+Repositories.swift
generics-restaurants/sources/Menu/: MenuView.swift
generics-restaurants/sources/Menu/NewMenuItem/: NewMenuItemView.swift
generics-restaurants/sources/Now/: NowFeature.swift
generics-restaurants/sources/OrderHistory/: OrderHistoryFeature.swift
(+446 files in other folders)
