load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load(
    "@build_bazel_rules_apple//apple:macos.bzl",
    "macos_application",
    "macos_extension",
)
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

swift_library(
    name = "SwiftlyHttp",
    srcs = glob(["generics-shared/Sources/SwiftlyHttp/**/*.swift"]),
)

swift_library(
    name = "GenericsUI",
    srcs = glob(["generics-shared/Sources/GenericsUI/**/*.swift"]),
)

swift_library(
    name = "GenericsHelpers",
    srcs = glob(["generics-shared/Sources/GenericsHelpers/**/*.swift"]),
)

swift_library(
    name = "GenericsCore",
    srcs = glob(["generics-shared/Sources/GenericsCore/**/*.swift"]),
    deps = [
        ":SwiftlyHttp",
        "@swiftpkg_swift_spyable//:Spyable",
        "@swiftpkg_factory//:Factory",
        ":GenericsHelpers",
        ":SharedModels",
    ],
    visibility = [":__subpackages__"]
)

swift_library(
    name = "SharedModels",
    srcs = glob(["generics-server/Sources/SharedModels/**/*.swift"]),
    visibility = [":__subpackages__"]
)

swift_library(
    name = "CustomerMenu",
    srcs = glob(["generics-shared/Sources/Features/CustomerMenu/**/*.swift"]),
    deps = [
        ":GenericsCore",
        ":GenericsUI",
        ":SharedModels",
        ":SwiftlyHttp",
        "@swiftpkg_factory//:Factory",
    ],
    visibility = [":__subpackages__"]
)

swift_library(
    name = "CustomerCart",
    srcs = glob(["generics-shared/Sources/Features/CustomerCart/**/*.swift"]),
    deps = [
        ":GenericsCore",
        ":GenericsUI",
        ":SharedModels",
        ":SwiftlyHttp",
        "@swiftpkg_factory//:Factory",
    ],
    visibility = [":__subpackages__"]
)

swift_binary(
    name = "server",
    srcs = glob(["generics-server/Sources/Server/**/*.swift"]),
    deps = [
        ":SharedModels",
        "@swiftpkg_fluent//:Fluent",
        "@swiftpkg_fluent_postgres_driver//:FluentPostgresDriver",
        "@swiftpkg_pathkit//:PathKit",
        "@swiftpkg_soto//:SotoS3",
        "@swiftpkg_vapor//:Vapor",
    ]
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "Generics",
    tags = ["manual"],
    top_level_targets = [
        "//clients/generics-app:GenericsApp",
        "//clients/generics-restaurants:GenericsRestaurants"
    ],

)
