load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")

swift_library(
    name = "SharedModels",
    srcs = glob(["generics-server/Sources/SharedModels/**/*.swift"]),
    visibility = ["//visibility:public"],
)

swift_binary(
    name = "server",
    srcs = glob(["generics-server/Sources/Server/**/*.swift"]),
    deps = [
        ":SharedModels",
        "@swiftpkg_fluent//:Fluent",
        "@swiftpkg_fluent_postgres_driver//:FluentPostgresDriver",
        "@swiftpkg_pathkit//:PathKit",
        "@swiftpkg_soto//:SotoS3",
        "@swiftpkg_vapor//:Vapor",
    ],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "Generics",
    tags = ["manual"],
    top_level_targets = [
        "//clients/generics-app:GenericsApp",
        "//clients/generics-restaurants:GenericsRestaurants",
        "//clients/generics-restaurants:GenericsRestaurantsTests",
    ],
)
