load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "top_level_target", "xcodeproj")

swift_library(
    name = "SharedModels",
    srcs = glob(["generics-server/sources/shared-models/**/*.swift"]),
    module_name = "SharedModels",
    visibility = ["//visibility:public"],
)

swift_binary(
    name = "server",
    srcs = glob(["generics-server/sources/server/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        ":SharedModels",
        "@swiftpkg_fluent//:Fluent",
        "@swiftpkg_fluent_postgres_driver//:FluentPostgresDriver",
        "@swiftpkg_pathkit//:PathKit",
        "@swiftpkg_soto//:SotoS3",
        "@swiftpkg_vapor//:Vapor",
    ],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    pre_build = "./lint.sh",  # I couldn't come up with a better way
    project_name = "Generics",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            "//clients/generics-app:GenericsApp",
            target_environments = [
                # "device",
                "simulator",
            ],
        ),
        # ",
        "//clients/generics-restaurants:GenericsRestaurants",
        "//clients/generics-restaurants:GenericsRestaurantsTests",
        "//clients/bot:bot",
        ":server",
    ],
)
