load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "bot",
    srcs = glob(["sources/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:SharedModels",
        "//clients/libraries:GenericsCore",
        "@swiftpkg_swift_argument_parser//:ArgumentParser",
    ],
)
