load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "CustomerMenu",
    srcs = glob(["customer-menu/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:SharedModels",
        "//clients/libraries:GenericsCore",
        "//clients/libraries:GenericsUI",
        "//clients/libraries:SwiftlyHttp",
        "@swiftpkg_factory//:Factory",
    ],
)

swift_library(
    name = "CustomerCart",
    srcs = glob(["customer-cart/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:SharedModels",
        "//clients/libraries:GenericsCore",
        "//clients/libraries:GenericsUI",
        "//clients/libraries:SwiftlyHttp",
        "@swiftpkg_factory//:Factory",
    ],
)
