load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "generics-app",
    srcs = glob(["sources/**/*.swift"]),
    deps = [
        "//:SharedModels",
        "//clients/libraries:GenericsCore",
        "//clients/libraries:GenericsUI",
        "@swiftpkg_factory//:Factory",
    ],
)

ios_application(
    name = "GenericsApp",
    bundle_id = "com.roya1v.GenericsApp",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "16.1",
    resources = glob(["resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [":generics-app"],
)
