load("@build_bazel_rules_apple//apple:apple.bzl", "local_provisioning_profile")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcode_provisioning_profile")

swift_library(
    name = "generics-app",
    srcs = glob(["sources/**/*.swift"]),
    deps = [
        "//:SharedModels",
        "//clients/libraries:GenericsCore",
        "//clients/libraries:GenericsHelpers",
        "//clients/libraries:GenericsUI",
        "@swiftpkg_factory//:Factory",
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture",
    ],
)

ios_application(
    name = "GenericsApp",
    bundle_id = "com.roya1v.GenericsApp",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "16.4",
    provisioning_profile = ":xcode_profile",
    resources = glob(["resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [":generics-app"],
)

local_provisioning_profile(
    name = "the_profile",
    profile_name = "iOS Team Provisioning Profile: com.roya1v.GenericsApp",
    team_id = "1234567898",
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":the_profile",
    team_id = "1234567898",
)
