load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")

swift_library(
    name = "generics-restaurants",
    srcs = glob([
        "sources/**/*.swift",
        
        ]),
    deps = [
        "@swiftpkg_factory//:Factory",
        "//clients/libraries:GenericsCore",
        "//:SharedModels",
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture",
    ],
)

macos_application(
    name = "GenericsRestaurants",
    bundle_id = "build.bazel.rules-apple-example",
    infoplists = ["Info.plist"],
    resources = glob(["resources/**/*"]),
    minimum_os_version = "13.0",
    visibility = ["//visibility:public"],
    deps = [":generics-restaurants"],
)

