load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SwiftlyHttp",
    srcs = glob(["swiftly-http/*.swift"]),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "GenericsUI",
    srcs = glob(["ui/**/*.swift"]),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "GenericsUIKit",
    srcs = glob(["uikit/**/*.swift"]),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "GenericsHelpers",
    srcs = glob(["helpers/**/*.swift"]),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "GenericsCore",
    srcs = glob(["core/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        ":GenericsHelpers",
        ":SwiftlyHttp",
        "//:SharedModels",
        "@swiftpkg_factory//:Factory",
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture",
        "@swiftpkg_swift_spyable//:Spyable",
    ],
)
