load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AuthLogic",
    srcs = glob(["sources/**/*.swift"]),
    module_name = "AuthLogic",
    visibility = ["//visibility:public"],
    deps = [
        "//clients/libraries:GenericsCore",
        "//clients/libraries:GenericsHelpers",
        "@swiftpkg_factory//:Factory",
        "@swiftpkg_swift_composable_architecture//:ComposableArchitecture",
    ],
)
